--- a/projects.html
+++ b/projects.html
@@ -28,12 +28,39 @@
 
        </header>
        <div class="content">
+            <table>
+                <tr>
+                    <th> A </th>
+                    <th> B </th>
+                    <th> C </th>
 
+                </tr> 
+                <tr>
+                    <td> 1 </td>
+                    <td rowspan="2"> 2 </td>
+                    <td> 3 </td>
+
+                <tr>
+                    <td> 4 </td>
+                    <td>   </td>
+                    <td> 5 </td>
+
+                </tr>
+        
+                <tr>
+                    <td> 1 </td>
+                    <td> 2 </td>
+                    <td> 3 </td>
+                </tr>  
+            </table>
 
        </div>
+       <div class="footer">
+            <div class="container">
+                    <p>copyright &copy; D. Samantha Elizondo Becerra</p>
+            </div>
+        </div>
 
-       <footer>
-            Copyright &copy; D. Samantha Elizondo Becerra
-       </footer>
+       
     </body>
 </html>
