--- a/contact.html
+++ b/contact.html
@@ -22,12 +22,25 @@
             
             <div class="socials">
                 <a href="https://github.com/s-elibec" target="blank"><img src="images/github_logo.png"></a>
+                <a href="https://www.linkedin.com/in/samantha-elizondo-becerra-2596782ab/" target="blank"><img src="images/linkedin.png"></a>
             </div>
 
        </header>
-       <div class="content">
+       <div class="contactus">
+            <br/>
+            <br/>
+            <h1>Contact Us</h1>
+            <h3>Any questions or remarks? Just write me a message!</h3>
+       </div>
 
+       <div class="phone">
+            <img class="phone_icon" src="phone_icon.png">
+            <p>Phone: +1 (956) 877-1145</p>
+       </div>
 
+       <div class="email">
+            <img class="email_icon" src="mail_icon.png">
+            <p>Email: sam.elibec@gmail.com</p>
        </div>
 
        <footer>
