--- a/experience.html
+++ b/experience.html
@@ -26,12 +26,66 @@
 
        </header>
        <div class="content">
+            <div class="experience">
+                <h2>Experience</h2>
+                <br/>
+                <h3><a href="https://www.facebook.com/p/Reveau-Clinica-y-Spa-100063653138064/" target="blank">Worked at Clinic Reveau</a></h3>
+                <img src="images/reveau-logo.jpg" length="250px" width="200px">
+                <br/>
+                <br/>
+                <h5>June 2021 - August 2021</h5>
+                <h5>May 2024 - August 2024</h5>
+                <p>Worked as an administrative assistant for the clinic. My tasks included:
+                </p>
+                <ul class="task">
+                    <li>Managing patient records</li>
+                    <li>Inventory</li>
+                    <li>Customer Service</li>   
+                </ul>
 
+                <br/>
+                <h3><a href="https://www.cbg.ipn.mx/" target="blank">Volunteer at Center for Genomic Biotechnology</a></h3>
+                <img src="images/cbg-logo.png" width="200px">
+                <br/>
+                <br/>
+                <h5>September 2022 - March 2023</h5>
+                <p>Worked as a volunteer in the administrative deparment
+                    as an administrative assistant. My tasks included: 
+                </p>
+                <ul class="task">
+                    <li>Organizing files and thesis papers</li>
+                    <li>Managing the database</li>
+                    <li>Inventory</li>
+                </ul>
 
+                <br/>
+                <h3><a href="https://www.facebook.com/iieslanguagecenter/" target="blank">Worked at IIES Language Center</a></h3>
+                <img src="images/iies-logo.jpg" width="200px">
+                <br/>
+                <br/>   
+                <h5>May 2025</h5>
+                <h5>October 2025</h5>
+                <p>Worked as a substitute english teacher. The first time for a day
+                    and the second time for a month.
+                </p>
+                <br/>
+
+                <h3>For more information, check my CV below:</h3>
+                <br/>
+                <h4 class="cv"><a href="CV(english).pdf" target="blank">Curriculum_Vitae.pdf</a></h4>
+            </div>
+            
        </div>
+       <br/>
 
-       <footer>
+       <div class="footer">
+            <div class="container">
+                    <p>copyright &copy; D. Samantha Elizondo Becerra</p>
+            </div>
+        </div>
+
+       <!--<footer>
             Copyright &copy; D. Samantha Elizondo Becerra
-       </footer>
+       </footer>-->
     </body>
 </html>
