--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 in the future, I will be able to work in these areas. </p>
             <br/>
 
-            <img class="profile" src="images/icon.jpg" alt="Cannot load icon">
+            <img class="profile" src="images/meprofile.jpeg" alt="Cannot load icon">
 
 
             <h4>My Hobbies</h4>
